--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -41,13 +41,13 @@
 
 
 - name: Fetch instance information
-  openstack.cloud.server_info:
+  os_server_info:
     cloud: openstack
     region_name: regionOne
   register: result_os_servers
 
 
-- name: Show instance
+- name: Show instance name and IP
   debug:
     msg: "{{ item.name }} {{ item.public_v4 }}"
   loop: "{{ result_os_servers.openstack_servers }}"
