--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -9,6 +9,17 @@
     backup: yes
 
 - name: enable repos
- 
-- name: install base tools and packages
+  template:
+    src: repos_template.j2
+    dest: /etc/yum.repos.d/treetier.repo
+    owner: root
+    group: root
+    mode: 0644 
 
+- name: install base tools and packages
+  yum:
+    name:
+      - httpie
+      - haproxy
+      - python-pip
+    state: latest
