--- a/roles/app-tier/tasks/main.yml
+++ b/roles/app-tier/tasks/main.yml
@@ -12,7 +12,7 @@
 - name: Change the main page of Tomcat
   template:
     src: index.html.j2
-    dest: "{{ tomcat_web_root }}"/index.html
+    dest: "{{ tomcat_web_root }}/index.html"
     mode: 0644
 
 - name: Enable Tomcat
