--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -11,7 +11,7 @@
 - name: enable repos
   template:
     src: repos_template.j2
-    dest: /etc/yum.repos.d/treetier.repo
+    dest: /etc/yum.repos.d/internal.repo
     owner: root
     group: root
     mode: 0644 
