--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -2,7 +2,6 @@
 - name: Create instances
   os_server:
     cloud: openstack
-    state: "{{ _osp_servers.value.state | default('present') }}"
     name: "{{ _osp_servers.value.name }}"
     image: "{{ _osp_servers.value.image }}"
     key_name: "{{ _osp_servers.value.key_name }}"
@@ -42,11 +41,21 @@
   register: result_floating_ips
 
 
+- name: show my register
+  debug:
+    var: result_floating_ips
+
+
 - name: Fetch instance information
   os_server_info:
     cloud: openstack
     region_name: regionOne
   register: result_os_servers
+
+
+- name: show my register
+  debug:
+    var: result_os_servers
 
 
 - name: Show instance name and IP
