--- a/roles/osp-facts/tasks/main.yml
+++ b/roles/osp-facts/tasks/main.yml
@@ -15,5 +15,7 @@
 - name: Add host 
   add_host: 
     name: "{{ item.public_v4 }}" 
-    group: "{{ item.metadata.group }}"
+    group: 
+      - "{{ item.metadata.group }}"
+      - "{{ item.metadata.deployment_name }}"
   loop: "{{ r_os_servers.openstack_servers }}"
