wip: add become method sudo

--- a/aws_provision.yml
+++ b/aws_provision.yml
@@ -1,12 +1,15 @@
 ---
 - hosts: workstation
   become: true
+  become_method: sudo
   gather_facts: false
+
   tasks:
     - name: create bin directory
       file:
         path: /root/bin
         state: directory
+  
     - name: get script common.sh
       get_url:
         url: "{{ param_repo_base }}/scripts/common.sh"
@@ -18,11 +21,13 @@
         url: "{{ param_repo_base }}/scripts/jq-linux64"
         dest: /root/bin/jq
         mode: 0755
+    
     - name: get script order_svc.sh
       get_url:
         url: "{{ param_repo_base }}/scripts/order_svc.sh"
         dest: /root/order_svc.sh
         mode: 0755
+    
     - name: create credentials
       copy:
         content: |
