--- a/roles/app-tier/handlers/main.yml
+++ b/roles/app-tier/handlers/main.yml
@@ -1,10 +1,10 @@
 ---
-- name: start {{ payload }}
+- name: start_{{ payload }}
   service:
-    name: tomcat
+    name: {{ payload }}
     state: started
 
-- name: restart_tomcat
+- name: restart_{{ payload }}
   service:
-    name: tomcat
+    name: {{ payload }}
     state: restarted
