--- a/roles/osp-instance-delete/tasks/main.yml
+++ b/roles/osp-instance-delete/tasks/main.yml
@@ -3,14 +3,13 @@
   os_server_info:
     cloud: openstack
     region_name: regionOne
-  register: result_os_servers
+  register: r_os_servers
   
-
 - name: Delete instances
   os_server:
     cloud: openstack
     state: absent
     name: "{{ item.name }}"
-  loop: "{{ result_os_servers }}"
+  loop: "{{ r_os_servers }}"
   loop_control:
     label: "{{ item.name }}"
