feat: add handler to db role

--- a/roles/db-tier/handlers/main.yml
+++ b/roles/db-tier/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: restart_{{ postgres_service }}
+- name: restart_postgres
   service:
     name: "{{ postgres_service }}"
     state: restarted
